--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "private": true,
   "dependencies": {
     "@contentful/app-sdk": "4.12.1",
+    "@contentful/default-field-editors": "^1.2.34",
     "@contentful/f36-components": "4.20.6",
     "@contentful/f36-tokens": "4.0.1",
+    "@contentful/f36-workbench": "^4.20.4",
+    "@contentful/field-editor-reference": "^5.3.1",
+    "@contentful/field-editor-rich-text": "^3.1.4",
+    "@contentful/field-editor-shared": "^1.1.3",
+    "@contentful/field-editor-single-line": "^1.1.6",
     "@contentful/react-apps-toolkit": "1.2.7",
     "contentful-management": "10.14.0",
     "emotion": "10.0.27",
@@ -43,6 +49,7 @@
     "@testing-library/react": "12.1.5",
     "@tsconfig/create-react-app": "1.0.2",
     "@types/jest": "29.0.3",
+    "@types/lodash": "^4.14.185",
     "@types/node": "18.7.18",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.3",
